Restore behavior of 4.1 that allowed any one argument to be passed to the server on Windows service startup, and not just --defaults-file=file. This appears to be an unnecessary limitation, but fixing that will require a larger refactoring of the Windows service installation and startup code. (Bug #7856)